Sync general improvements from hypemarket boilerplate
Backport non-business infrastructure, UI, and DX improvements from
hypemarket to keep moneygun strong as the upstream boilerplate.

Infrastructure:
- Replace SolidQueue with GoodJob (initializer, migration, worker process)
- Add Lexxy rich text editor + ActionText setup
- Remove ActiveAnalytics (gem + concern)
- Add honeybadger, nondisposable, mocha gems + configs
- Active Storage: VIPS processor, AVIF support, 48h direct upload expiry
- CI: concurrency control, PR type filtering, postgres:18 pin

UI/UX:
- Split sidebar into icon rail + contextual sidebars (user/org)
- Mobile-only navbar, desktop icon rail navigation
- PWA: badge, install prompt, enhanced manifest, working service worker
- Toast-style flash messages, skip-to-content link, turbo confirm dialog
- View transitions, CTA animations, bottom sheet modals
- Dark mode meta tags (color-scheme, theme-color)
- Modal: size parameter + subtitle support
- Pagination: item range info display
- TabsComponent: better spacing + border parameter

New Stimulus controllers (11):
badge, lightbox, local_save, local_time, pwa_install, reset_form,
scroll_bottom, scroll_to_active, share, tooltip, dropzone

Helpers & utilities:
- meta_tags_helper, html_helper, time_helper (replaces local_time gem)
- Enhanced application_helper (resolve_icon, breadcrumbs, sanitize_url, etc.)
- Loofah scrubbers (auto_link, external_link)
- Enhanced Translation concern (Accept-Language header parsing)
- Lint rake task

Models:
- User: name column, avatar attachment, cached notification count
- Membership: role change notifications
- SimpleForm: range, color, dropzone input wrappers
- Seeds: idempotent organization creation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,7 +67,7 @@ en:
       back: "⚠ Stop impersonating"
     omniauth_callbacks:
       failure: Something went wrong. Please try again
-      success: ""
+      success: ''
     passwords:
       no_token: You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided.
       send_instructions: You will receive an email with instructions on how to reset your password in a few minutes.
@@ -85,7 +85,7 @@ en:
       updated_but_not_signed_in: Your account has been updated successfully, but since your password was changed, you need to sign in again.
     sessions:
       already_signed_out: Signed out successfully.
-      signed_in: ""
+      signed_in: ''
       signed_out: Signed out successfully.
     unlocks:
       send_instructions: You will receive an email with instructions for how to unlock your account in a few minutes.
@@ -236,6 +236,9 @@ en:
       request_rejected_notifier:
         notification:
           message: Your request to join %{organization_name} has been declined.
+      role_changed_notifier:
+        notification:
+          message: Your role in %{organization_name} has been changed to %{role}
   organizations:
     dashboard:
       index:
@@ -330,7 +333,9 @@ en:
       title: Search
   shared:
     actions:
+      cancel: Cancel
       confirm: Are you sure?
+      confirm_action: Confirm
       copied: "✅ Copied!"
       copy: "📋 Copy"
       create: Create
@@ -344,6 +349,8 @@ en:
       rate_limit: Try again later.
     footer:
       all_rights_reserved: All rights reserved.
+    modal:
+      close: Close
     navigation:
       edit_profile: Edit profile
       home: Home
@@ -352,8 +359,15 @@ en:
       organizations: Organizations
       profile: Profile
       register: Sign up
+    pagination:
+      info: Showing %{from} to %{to} of %{count}
     sidebar:
+      global_navigation: Global navigation
+      main_navigation: Main navigation
+      navigation: Navigation
+      org_navigation: Organization navigation
       search: Search... ⌘K
+    skip_to_content: Skip to main content
   static:
     index:
       title: Home
